--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -10,6 +10,8 @@ RUN poetry config virtualenvs.create false
 
 COPY pyproject.toml poetry.lock ./
 
+RUN poetry install --no-ansi 
+
 COPY  . ./
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
