--- a/homework_04/docker-compose.yml
+++ b/homework_04/docker-compose.yml
@@ -3,8 +3,9 @@ services:
   pg:
     image: postgres
     environment:
-      POSTGRES_DB: blog
-      POSTGRES_USER: user
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
+      
