--- a/homework_06/app/pyproject.toml
+++ b/homework_06/app/pyproject.toml
@@ -7,8 +7,12 @@ authors = ["Dgonede <dgonegonee@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 flask = "^3.0.3"
+flask-migrate = "^4.0.7"
+psycopg = "^3.2.1"
+sqlalchemy = "^2.0.31"
+flask-sqlalchemy = "^3.1.1"
 
 
 
