--- a/app_test_for_home/pyproject.toml
+++ b/app_test_for_home/pyproject.toml
@@ -2,10 +2,11 @@
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 flask-migrate = "^4.0.7"
+psycopg = "^3.2.1"
 
 
 
