--- a/homework_06/app/docker-compose.yml
+++ b/homework_06/app/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_PASSWORD: example
     volumes:
       - db-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d blog -U user" ]
       interval: 5s
